--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,11 +6,11 @@
 </section>
 <style>
     .hero {
-        width: 100vw;
         height: 100vh;
-        background-image: url("https://images.unsplash.com/photo-1487958449943-2429e8be8625?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-        object-fit: cover;
-        background-position: 0 -400px;
+        width: 100%;
+        background-image: url("https://res.cloudinary.com/dorinvbuv/image/upload/v1710504890/Plc/V5_page-0001-transformed_vczyu5.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
         display: flex;
         align-items: end;
         h1 {
