--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,24 +1,24 @@
 <section class="hero">
-    <h1>
-        Revitalizando el pasado con diseño innovador: en Pablo & CC
-        transformamos sueños en estructuras que cuentan historias atemporales.
-    </h1>
+  <h1>
+    Revitalizando el pasado con diseño innovador: en Pablo & CC transformamos
+    sueños en estructuras que cuentan historias atemporales.
+  </h1>
 </section>
 <style>
-    .hero {
-        height: 100vh;
-        width: 100%;
-        background-image: url("https://res.cloudinary.com/dorinvbuv/image/upload/v1710504890/Plc/V5_page-0001-transformed_vczyu5.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        display: flex;
-        align-items: end;
-        h1 {
-            width: 1000px;
-            background-color: rgba(245, 245, 245, 0.85);
-            margin: 100px 50px 100px 50px;
-            padding: 20px;
-            border-radius: 25px;
-        }
+  .hero {
+    height: 100vh;
+    width: 100%;
+    background-image: url("https://images.unsplash.com/photo-1488972685288-c3fd157d7c7a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: end;
+    h1 {
+      width: 1000px;
+      background-color: rgba(245, 245, 245, 0.85);
+      margin: 100px 50px 100px 50px;
+      padding: 20px;
+      border-radius: 25px;
     }
+  }
 </style>
