--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -5,8 +5,9 @@ const cantidad = parseInt(images.length);
 ---
 
 <article>
-    <section>
-       <div class="titulo">
+    <section class="texto">
+       <section class="mdx" data-aos="flip-left">
+         <div class="titulo">
             <h1>{h1}</h1>
             {
                 tags.map((tag: string) => (
@@ -17,13 +18,15 @@ const cantidad = parseInt(images.length);
             }
         </div>
         <slot />
+       </section>
+      
 
     </section>
  
     <section id="myImages">
         {
-            images.map((i: { url: string; alt: string }) => (
-                <img src={i.url} alt={i.alt}/>
+            images.map((i: { url: string; alt: string; grid: string }) => (
+                <img src={i.url} alt={i.alt} class={ i.grid? i.grid : ""}/>
             )) 
         }
     </section>
@@ -80,26 +83,55 @@ const cantidad = parseInt(images.length);
 s        font-size: large;
     }
     img {
-        width: 100%;
+        
         margin: auto;
+        object-fit: cover;
+        width: 100%;
+        transform: scaleX(-1);
         
     }
 
-    img:hover {
-        transform: none;
-    }
+  
     
-    @media screen and (min-width: 950px) { /* Ordenaror */
+    @media screen and (min-width: 950px) { 
+       
+
+        article:nth-child(2n) {
+            flex-direction: row-reverse;
+        }
+
+        .texto {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            padding: 30px;
+
+            .mdx { 
+                width: 100%;
+                border: dashed 5px whitesmoke;
+                
+            }
+            .mdx:hover {
+                border: dashed 5px rebeccapurple;
+            }
+        }
+        }
         section {
             width: 50%;
         }
 
         #myImages {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             grid-gap: 10px; 
         }
-    }
 
+        .apaisada {
+        grid-column: span 2;
+        height: 100%; /* Esto hará que la imagen ocupe dos columnas */
+        }
 
+        .cover {
+            height: 100%;
+        }
 </style>
