--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -4,19 +4,19 @@ import Onecard from "../../components/onecard.astro";
 import { getCollection } from "astro:content";
 import Layoud from "../../layouts/Layoud.astro";
 export const getStaticPaths = async () => {
-    const collections = await getCollection("cards");
-    const uniquetags = [
-        ...new Set(collections.map((card) => card.data.tags).flat()),
-    ];
-    return uniquetags.map((tag) => {
-        const filteredCards = collections.filter((col) =>
-            col.data.tags.includes(tag),
-        );
-        return {
-            params: { tag },
-            props: { cards: filteredCards },
-        };
-    });
+  const collections = await getCollection("cards");
+  const uniquetags = [
+    ...new Set(collections.map((card) => card.data.tags).flat()),
+  ];
+  return uniquetags.map((tag) => {
+    const filteredCards = collections.filter((col) =>
+      col.data.tags.includes(tag)
+    );
+    return {
+      params: { tag },
+      props: { cards: filteredCards },
+    };
+  });
 };
 
 const { tag } = Astro.params;
@@ -26,26 +26,35 @@ console.log(cards);
 ---
 
 <Layoud>
-    <a href="/" id="back"><button>{"<"}</button></a>
-    {cards.map(({ slug }) => <Onecard slug={slug} />)}
+  <a href="/" id="back"><button>{"<"}</button></a>
+  {
+    cards.map(({ slug }) => (
+      <article>
+        <Onecard slug={slug} />
+      </article>
+    ))
+  }
 </Layoud>
 
 <style>
-    #back {
-        display: block;
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        & button {
-            width: 50px;
-            height: 50px;
-            background-color: greenyellow;
-            border: none;
-            border-radius: 5px;
-            &:hover {
-                box-shadow: 0px 0px 4px 3px blue;
-                cursor: pointer;
-            }
-        }
+  #back {
+    display: block;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    & button {
+      width: 50px;
+      height: 50px;
+      background-color: greenyellow;
+      border: none;
+      border-radius: 5px;
+      &:hover {
+        box-shadow: 0px 0px 4px 3px blue;
+        cursor: pointer;
+      }
     }
+  }
+  article {
+    margin-top: 60px;
+  }
 </style>
